# aiida-fourstate

./: .gitignore  README.md  pyproject.toml
launcher-scripts/: README.md  inspect-results.py
launcher-scripts/CrI3-launchers/: 2CrI3-1.cif  cri3_3x3.cif  cri3_primitive.cif  launch_magnetic_exchange-abinit.py  launch_magnetic_exchange-qe.py  launch_magnetic_exchange-siesta.py  launch_magnetic_exchange-vasp-UNITCELL.py  launch_magnetic_exchange-vasp.py
launcher-scripts/CrI3-launchers/example-convergence/: launch_magnetic_exchange-abinit-convergence.py  launch_magnetic_exchange-qe-convergence.py  show-convergence.py
launcher-scripts/CrI3-launchers/example-convergence-qe/: launch_magnetic_exchange-qe-convergence.py  show-convergence.py
launcher-scripts/acwf-simple-launchers/: README.md  test-launch-abinit-acwf.py  test-launch-qe-acwf.py  test-launch-vasp-acwf.py
launcher-scripts/aiida-config-examples/abinit/: abinit-10.0.3-thor-micromamba.yaml  thor-micromamba-config.yaml  thor-micromamba-setup.yaml
launcher-scripts/aiida-config-examples/quantum_espresso/eiger.alps/: eiger.alps-config.yaml  eiger.alps-setup.yaml  pw-7.4.1@eiger.alps.yaml
launcher-scripts/aiida-config-examples/quantum_espresso/thor/: qe-7.3-pw-gf@thor.yaml  thor-setup.yaml
launcher-scripts/aiida-config-examples/vasp/eiger.alps/: computer-setup-config-README.txt  vasp-6.5@eiger.alps.yaml
src/aiida_fourstate/: __init__.py  magnetic_exchange.py
